--- a/Dockerfile.consumer
+++ b/Dockerfile.consumer
@@ -15,4 +15,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Запускаем Consumer
-CMD ["python", "src/kafka_consumer.py"]
+CMD ["python", "-m", "src.kafka_consumer"]
