--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,32 @@
-version: "3.8"
-
 services:
-  # === ZooKeeper ===
   zookeeper:
-    image: bitnami/zookeeper:latest
+    image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-      # Перенастраиваем порт на 2180
-      - ZOO_CLIENT_PORT_NUMBER=2180
+      ZOOKEEPER_CLIENT_PORT: 2181
     ports:
-      - "2180:2180"
+      - "2181:2181"
 
-  # === Kafka (классический режим, без KRaft) ===
   kafka:
-    image: bitnami/kafka:latest
+    image: confluentinc/cp-kafka:latest
     container_name: kafka
-    ports:
-      - "9091:9091"
-    environment:
-      # Отключаем KRaft и явно указываем режим broker
-      - KAFKA_ENABLE_KRAFT=no
-      - KAFKA_CFG_PROCESS_ROLES=broker
-      - KAFKA_CFG_NODE_ID=1
-      
-      # Брокер ID
-      - KAFKA_CFG_BROKER_ID=1
-
-      # Подключаемся к ZooKeeper на 2180
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2180
-
-      # Настраиваем слушатели
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9091
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9091
-      # Без этого переменная может быть "unbound"
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
-
-      # Разрешаем PLAINTEXT для локальной разработки (небезопасно для продакшена)
-      - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: ["CMD", "bash", "-c", "echo > /dev/tcp/localhost/9092"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
 
-  # === Основное приложение (FastAPI) ===
   app:
     build:
       context: .
@@ -50,13 +35,15 @@ services:
     container_name: app
     ports:
       - "8081:8081"
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     depends_on:
-      - kafka
-      - vault
-      - mongodb
-      - consumer
-
-  # === Kafka Consumer ===
+      kafka:
+        condition: service_healthy
+      vault:
+        condition: service_started
+      mongodb:
+        condition: service_started
   consumer:
     build:
       context: .
@@ -64,20 +51,20 @@ services:
     image: yourorg/kafka-consumer:latest
     container_name: consumer
     depends_on:
-      - kafka
-      - mongodb
+      kafka:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
+      app:
+        condition: service_started
     environment:
-      # Consumer ищет брокер на "kafka:9091"
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9091
-
-      # Vault и другие переменные
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - VAULT_ADDR=http://vault:8200
       - VAULT_TOKEN=${VAULT_TOKEN}
       - DB_NAME=${DB_NAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_USERNAME=${DB_USERNAME}
 
-  # === Vault ===
   vault:
     image: hashicorp/vault:latest
     container_name: vault
@@ -90,8 +77,9 @@ services:
       - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
     command: server -dev
 
-  # === MongoDB ===
   mongodb:
+    depends_on:
+      - vault
     image: mongo:latest
     container_name: mongodb
     ports:
