--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,34 @@
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: ["CMD", "bash", "-c", "echo > /dev/tcp/localhost/9092"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     image: "${DOCKER_IMAGE:-panchesco13/banknote-classifier}:${TAG:-latest}"
@@ -8,14 +36,34 @@ services:
     ports:
       - "8081:8081"
     environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      kafka:
+        condition: service_healthy
+      vault:
+        condition: service_started
+      mongodb:
+        condition: service_started
+  consumer:
+    build:
+      context: .
+      dockerfile: Dockerfile.consumer
+    image: yourorg/kafka-consumer:latest
+    container_name: consumer
+    depends_on:
+      kafka:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
+      app:
+        condition: service_started
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - VAULT_ADDR=http://vault:8200
       - VAULT_TOKEN=${VAULT_TOKEN}
       - DB_NAME=${DB_NAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_USERNAME=${DB_USERNAME}
-    depends_on:
-      - vault
-      - mongodb
 
   vault:
     image: hashicorp/vault:latest
@@ -30,6 +78,8 @@ services:
     command: server -dev
 
   mongodb:
+    depends_on:
+      - vault
     image: mongo:latest
     container_name: mongodb
     ports:
