piplene moved to sub directory, partitions and topic configured from config file

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,9 @@ output_file = tree.dot
 level = INFO
 log_file = logs/app.log
 
+[kafka]
+bootstrap_servers = kafka:9092
+topic = banknote_predictions
+num_partitions = 3
+replication_factor = 1
+
